# midas

./: .gitignore  Cargo.toml  README.md
index-data/: 000001.json  000003.json  000016.json  000300.json  000688.json  399001.json  399005.json  399006.json  399812.json  399975.json  codes.json
midas-core/: Cargo.toml
midas-core/index-data/: 000015.json  000016.json  000300.json  000827.json  000905.json  000991.json  000992.json  399006.json  399971.json  codes.json  serve.sh
midas-core/src/: annual_profit.rs  index_code.rs  index_data.rs  lib.rs  simulate.rs
midas-core/src/model/: annual_profit.rs  index_code.rs  index_data.rs  mod.rs  profit.rs  simulate_result.rs  trade.rs
midas-http/: Cargo.toml
midas-http/src/: error.rs  lib.rs  main.rs
midas-http/src/controller/: index_code.rs  index_data.rs  mod.rs  simulate.rs
midas-spider/: Cargo.toml
midas-spider/src/: lib.rs  main.rs
midas-web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
midas-web/src/: App.tsx  Chart.tsx  ChartData.ts  GlobalSignal.ts  IndexDataChart.tsx  IndexDataChartOptions.ts  ProfitChart.tsx  ProfitDataChart.tsx  ProfitDataChartOptions.ts  ProfitOverview.tsx  TradeTable.tsx  dark.min.css  index.css
midas-web/src/api/: api.ts  indexCodeApi.ts  indexDataApi.ts  simulateApi.ts
midas-web/src/components/: AnnualProfitChart.tsx  Footer.tsx  Header.tsx  IndexDataChart.tsx  IndexDataPlane.tsx  ProfitChart.tsx  ProfitOverview.tsx  Simulate.tsx  SimulateForm.tsx  TradeDetailTable.tsx  TradeOverview.tsx  TradeTable.tsx
midas-web/src/interfaces/: IAnnualProfit.ts  IIndexCode.ts  IIndexData.ts  IProfit.ts  IProfitData.ts  ISimulateResult.ts  ITrade.ts
