[package]
name = "midas-http"
version = "0.1.0"
edition = "2021"

[dependencies]
midas-core = { path = "../midas-core" }
tracing = "*"
tracing-subscriber = "*"
axum = "*"
tokio = { version = "*", features = ["full"] }
tower-http = { version = "*", features = ["cors"] }
serde = { version = "*", features = ["derive"] }
chrono = "*"
