[package]
edition = "2024"
name = "midas-http"
version = "0.1.0"

[dependencies]
anyhow = "*"
axum = "*"
chrono = "*"
midas-core = {path = "../midas-core"}
serde = {version = "*", features = ["derive"]}
tokio = {version = "*", features = ["full"]}
tower-http = {version = "*", features = ["cors"]}
tracing = "*"
tracing-subscriber = "*"
