[package]
name = "midas-spider"
version = "0.1.0"
edition = "2021"

[dependencies]
midas-core = { path = "../midas-core" }
tracing = "0"
tracing-subscriber = "0"
reqwest = { version = "0", default-features = false, features = [
  "json",
  "rustls-tls",
] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
