[package]
name = "midas-spider"
version = "0.1.0"
edition = "2021"

[dependencies]
midas-core = { path = "../midas-core" }
tracing = "*"
tracing-subscriber = "*"
tokio = { version = "*", features = ["full"] }
reqwest = { version = "*", default-features = false, features = [
  "json",
  "rustls-tls",
] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
rayon = "*"
futures = "*"
