[package]
edition = "2024"
name = "midas-spider"
version = "0.1.0"

[dependencies]
futures = "*"
midas-core = { path = "../midas-core" }
rayon = "*"
reqwest = { version = "*", default-features = false, features = [
  "json",
  "rustls-tls",
] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
tokio = { version = "*", features = ["full"] }
tracing = "*"
tracing-subscriber = "*"
